plugins {
    id 'java'
    id 'com.gradleup.shadow' version '8.3.5'
}

group = 'net.bubblecraft'
version = '2.0.0'
description = 'BubbleLog - Advanced system monitoring for Velocity with hosting-friendly design'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
    maven {
        name = 'papermc'
        url = 'https://repo.papermc.io/repository/maven-public/'
    }
}

dependencies {
    compileOnly 'com.velocitypowered:velocity-api:3.4.0-SNAPSHOT'
    annotationProcessor 'com.velocitypowered:velocity-api:3.4.0-SNAPSHOT'
    
    // For system monitoring
    implementation 'com.github.oshi:oshi-core:6.6.5'
    
    // For configuration
    implementation 'org.spongepowered:configurate-yaml:4.1.2'
    implementation 'org.spongepowered:configurate-extra-guice:4.1.2'
}

shadowJar {
    archiveBaseName = 'BubbleLog'
    archiveClassifier = ''
    
    relocate 'oshi', 'net.bubblecraft.bubblelog.libs.oshi'
    relocate 'org.spongepowered.configurate', 'net.bubblecraft.bubblelog.libs.configurate'
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

build.dependsOn shadowJar
